# poc

./: .gitignore  README.md  docker-compose.yml  go.mod  go.sum
automation/mouse-random-move/: .gitignore  Makefile  README.md  go.mod  main.go
backup/mongodb/: Makefile  compose.yml
backup/mysql/: Makefile  compose.yml
backup/postgresql/: .envrc.example  .gitignore  Makefile  README.md
backup/rclone/: compose.serve.webdav.yml
backup/supabase/: .gitignore  Makefile  README.md
communication/grpc-simple/: go.work  go.work.sum
communication/grpc-simple/modules/server/python-server/: Makefile  pyproject.toml
communication/grpc-simple/modules/server/python-server/python_server/: main.py
communication/mosquitto/simple-demo/python-server/: pyproject.toml
communication/mosquitto/simple-demo/python-server/mosquitto_python_server/: main.py
communication/mosquitto/simple-demo/python-server/mosquitto_python_server/common/: types.py  values.py
communication/mosquitto/simple-demo/python-server/mosquitto_python_server/config/: mqtt.py
communication/mosquitto/simple-demo/python-server/mosquitto_python_server/consumer/: listener.py
communication/mosquitto/simple-demo/python-server/mosquitto_python_server/publisher/: handler.py
communication/rabbitmq/simple-demo/python-server/: pyproject.toml
communication/rabbitmq/simple-demo/python-server/python_server/: main.py
communication/rabbitmq/simple-demo/python-server/python_server/common/: constants.py  types.py
communication/rabbitmq/simple-demo/python-server/python_server/config/: rabbitmq.py
communication/rabbitmq/simple-demo/python-server/python_server/consumer/: listener.py
communication/rabbitmq/simple-demo/python-server/python_server/publisher/: handler.py
dagger/go-sdk/: Makefile  README.md  dagger.json  index.html
db/init/: scafold.sql  shopdb_ddl.sql
dind/with-ssh/: Dockerfile  Makefile  sshd.Dockerfile
docker/gotenberg/: Makefile
go-learning-test/: go.sum
go-scaffold/server/: go.mod
golang-todo-app/gin-gorm-todo-app/: main.go
golang-todo-app/golang-gorm-todo-app/: main.go
golang/go-vite/: Makefile  README.md  go.mod  main.go
golang/scaffold/: docker-compose.yml
golang/todo-app/: README.MD  go.mod  go.sum
gotenberg/: compose.yml
js-sdk-build-test/: README.md
js/hello-sdk/: rollup.config.js
loadtest/k6-dashboard/: .gitignore  Makefile  package-lock.json  package.json
local-https/: docker-compose.reverse-proxy.yml
local-https/config/: dynamic.yml
log/config/: static.yml
media/custom-build-opencv-js/: README.md
media/map-gocv-to-opencv/to-opencv/: pyproject.toml
media/map-gocv-to-opencv/to-opencv/jpeg/: main.py
media/map-gocv-to-opencv/to-opencv/png/: main.py
media/map-gocv-to-opencv/to-opencv/raw/: main.py
media/media-cropper/: .gitignore  CLAUDE.md  Makefile  README.md  (+12 more)
observability/backend-full-otel-lgtm/backends/ai-service/: .dockerignore  Dockerfile  pyproject.toml
observability/backend-full-otel-lgtm/backends/ai-service/ai_service/: main.py  otel.py  routers.py
python/dependency-injector/simple/: pyproject.toml
python/dependency-injector/simple/di_poc_simple/: api_client.py  container.py  main.py  main_entry.py  service.py
python/deployment/obfuscation/: pyproject.toml
python/deployment/obfuscation/src/multiplatform/: Makefile  main.py
python/deployment/obfuscation/src/packages-2depth/: Makefile  main.py
python/deployment/obfuscation/src/packages-2depth/hello/: hello.py
python/deployment/obfuscation/src/packages-2depth/hello/generator/: generator.py
python/deployment/obfuscation/src/single-with-external-lib/: Makefile  main.py
python/deployment/packaging/: pyproject.toml
python/deployment/packaging/src/fastapi-with-obfuscation/: .gitignore  Makefile  main-dist.py  main.py
python/deployment/packaging/src/fastapi-with-obfuscation/app/: __init__.py  hello.py
python/deployment/packaging/src/simple/: Makefile
python/deployment/packaging/src/with-binary/: Makefile  main.py
python/deployment/packaging/src/with-binary-access-outerfile/: .gitignore
python/deployment/packaging/src/with-binary-access-outerfile/binary/: .gitignore  go.mod  main.go
python/deployment/packaging/src/with-binary/binary/: .gitignore  go.mod  main.go
python/deployment/packaging/src/with-java/: Makefile  main.py
python/deployment/packaging/src/with-java/spring-server/src/main/java/com/example/springserver/: SpringServerApplication.java
python/deployment/packaging/src/with-multi-server/: Makefile  main.py
python/deployment/packaging/src/with-multi-server/go-server/: go.mod  main.go
python/deployment/packaging/src/with-obfuscation/: Makefile  main.py
python/fastapi/mongodb/: .env  README.md  config.py  main.py  pyproject.toml
python/fastapi/mongodb-and-mysql/: .env  config.py  db.py  main.py  pyproject.toml
python/fastapi/mongodb-and-mysql/devenv/: Makefile  compose.yml
python/fastapi/mongodb-and-mysql/devenv/mongodb/initdb.d/: mongo-init.js
python/fastapi/mongodb-and-mysql/devenv/mysql/initdb.d/: init.sql
python/fastapi/mongodb-and-mysql/domain/chat_history/: router.py
python/fastapi/mongodb-and-mysql/domain/log/: model.py  router.py
python/fastapi/mongodb/devenv/: .env  compose.yml
python/fastapi/mongodb/devenv/initdb.d/: mongo-init.js
python/fastapi/mongodb/domain/chat_history/: model.py  reqres.py  router.py
python/marimo/multi-app-with-api/: Makefile  README.md  main.py  pyproject.toml
python/marimo/multi-app-with-api/logic/: pyproject.toml
python/marimo/multi-app-with-api/logic/src/logic/: __init__.py
python/marimo/multi-app-with-api/multi_app_with_api/: __init__.py  helper.py
python/marimo/multi-app-with-api/notebooks/: about.py
python/record-rotation/: Makefile  pyproject.toml
python/record-rotation/record_rotation/: main.py
rclone/: Makefile  compose.config.yml  compose.serve.webdav.yml  compose.sync.webdav.yml  compose.yml
server/: go.mod  go.sum
spring-scaffold/: docker-compose.yml
ssh-forwarding/: Makefile  docker-compose.sshd.yml
traefik/: README.md
version1/: build.gradle  settings.gradle
(+1395 files in other folders)
