[tool.poetry]
name = "obfuscation"
version = "0.1.0"
description = ""
authors = ["Seungyeop Lee <xbeast7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12.0,<3.13.0"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.31.1"}
pyarmor = "^8.5.12"
pyinstaller = "^6.10.0"
numpy = "^2.1.2"
pyarmor-cli-core-windows = "^6.5.3"
pyarmor-cli-core-linux = "^6.5.3"
pyarmor-cli-core-darwin = "^6.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
