[tool.poetry]
name = "packaging-poc"
version = "0.1.0"
description = ""
authors = ["Seungyeop Lee <xbeast7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12.0,<3.13.0"
pyinstaller = "^6.10.0"
pyarmor = "^8.5.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.31.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
