[tool.poetry]
name = "python-server"
version = "0.1.0"
description = ""
authors = ["Seungyeop Lee <xbeast7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.4"}
aio-pika = "^9.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
