[tool.poetry]
name = "python_server"
version = "0.1.0"
description = ""
authors = ["seungyeop-lee <xbeast7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
grpcio = "^1.67.1"
python_protobuf = { path = "../../proto/python", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
